Segregated auth and user APIs
Updated swagger docs

Implemented isolated public health check endpoint
